# vsomeip-hello-world-ndk

./: .gitmodules  CMakeLists.txt  README.md
vsomeip-hello-world/app/: build.gradle
vsomeip-hello-world/gradle/wrapper/: gradle-wrapper.properties
